--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,7 +38,8 @@ sunxifb_drv_la_SOURCES = \
          sunxi_x_g2d.c \
          sunxi_x_g2d.h \
          sunxi_disp_hwcursor.c \
-         sunxi_disp_hwcursor.h
+         sunxi_disp_hwcursor.h \
+         arm_asm.S
 
 if HAVE_LIBUMP
 sunxifb_drv_la_SOURCES += \
